# hardcover

./: .gitignore  CHANGELOG.md  README.md  hardcover-library-linker.user.js  pyproject.toml
.github/workflows/: ci.yml
cli/: db.py  dover.py  hardcover.py  main.py  scorer.py
docs/plans/: 2026-03-08-dover-cli.md
tests/: test_db.py  test_dover.py  test_hardcover.py  test_main.py  test_scorer.py
